tamaño de app controlado (Pausa) en Main y Start

--- a/OurHistory/Views/MainPage.xaml
+++ b/OurHistory/Views/MainPage.xaml
@@ -23,34 +23,37 @@
         </AppBar>
     </Page.BottomAppBar>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="157*"/>
-            <RowDefinition Height="611*"/>
-        </Grid.RowDefinitions>
-        <Grid.Background>
-            <ImageBrush ImageSource="/Assets/Picture/fondo.jpg"/>
-        </Grid.Background>
-        <!--<Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="36" Margin="764,133,0,0" Grid.Row="1" Stroke="Black" VerticalAlignment="Top" Width="35"/>-->
-        <Button Name="facil"  HorizontalAlignment="Left" Height="70" Margin="288,222,0,0" VerticalAlignment="Top" Width="218" Grid.Row="1">
-            <Button.Background>
-                <ImageBrush ImageSource="/Assets/Picture/facil.jpg">
+        <Image x:Name="imgPausa" Source="/Assets/Picture/cultura.jpg" Stretch="Fill" Visibility="Collapsed"/>
+        <Grid x:Name="grid0" Margin="0,0,0,0" Visibility="Visible">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="157*"/>
+                <RowDefinition Height="611*"/>
+            </Grid.RowDefinitions>
+            <Grid.Background>
+                <ImageBrush ImageSource="/Assets/Picture/fondo.jpg"/>
+            </Grid.Background>
+            <!--<Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="36" Margin="764,133,0,0" Grid.Row="1" Stroke="Black" VerticalAlignment="Top" Width="35"/>-->
+            <Button Name="facil"  HorizontalAlignment="Left" Height="70" Margin="288,222,0,0" VerticalAlignment="Top" Width="218" Grid.Row="1">
+                <Button.Background>
+                    <ImageBrush ImageSource="/Assets/Picture/facil.jpg">
 
-                </ImageBrush>
-            </Button.Background>
-        </Button>
-        <Button Name="medio"  HorizontalAlignment="Left" Height="74" Margin="288,325,0,0" VerticalAlignment="Top" Width="218" Grid.Row="1">
-            <Button.Background>
-                <ImageBrush ImageSource="/Assets/Picture/medio.jpg">
-                </ImageBrush>
-            </Button.Background>
-        </Button>
-        <Button Name="dificil"  HorizontalAlignment="Left" Height="74" Margin="288,438,0,0" VerticalAlignment="Top" Width="218" Grid.Row="1">
-            <Button.Background>
-                <ImageBrush ImageSource="/Assets/Picture/dificil.jpg">
-                </ImageBrush>
-            </Button.Background>
-        </Button>
-        <Image Source="/Assets/Picture/Bolivia.png" Margin="644,138,203,88" Grid.RowSpan="2"/>
+                    </ImageBrush>
+                </Button.Background>
+            </Button>
+            <Button Name="medio"  HorizontalAlignment="Left" Height="74" Margin="288,325,0,0" VerticalAlignment="Top" Width="218" Grid.Row="1">
+                <Button.Background>
+                    <ImageBrush ImageSource="/Assets/Picture/medio.jpg">
+                    </ImageBrush>
+                </Button.Background>
+            </Button>
+            <Button Name="dificil"  HorizontalAlignment="Left" Height="74" Margin="288,438,0,0" VerticalAlignment="Top" Width="218" Grid.Row="1">
+                <Button.Background>
+                    <ImageBrush ImageSource="/Assets/Picture/dificil.jpg">
+                    </ImageBrush>
+                </Button.Background>
+            </Button>
+            <Image Source="/Assets/Picture/Bolivia.png" Margin="644,138,203,88" Grid.RowSpan="2"/>
 
+        </Grid>
     </Grid>
 </Page>
