--- a/OurHistory/Views/HistoriaYear.xaml
+++ b/OurHistory/Views/HistoriaYear.xaml
@@ -11,9 +11,10 @@
         <Grid.Background>
             <ImageBrush ImageSource="/Assets/Picture/fondojuego.jpg"/>
         </Grid.Background>
+        <Image x:Name="imgPausa" Source="/Assets/Picture/pausa.jpg" Stretch="Fill" Visibility="Collapsed"/>
         <Button Style="{StaticResource BackButtonStyle}" 
                 Name="BotonAtras"  Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <StackPanel>
+        <StackPanel x:Name="stack0">
             <TextBlock Name="year" Text="añoX" FontSize="65" Margin="60,70,0,0" 
                        FontFamily="Segoe Marker" Foreground="Black"/>
             <Grid Margin="60,0,0,0">
@@ -23,19 +24,20 @@
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0" Grid.Row="0">
                     
-                    <ScrollViewer Height="550" Width="550">
-                        <ListBox x:Name="lstAnio"
-                                ItemTemplate="{StaticResource listaAnio}" Background="Transparent"/>
+                    <ScrollViewer Height="550" Width="550" ZoomMode="Disabled">
+                        <ListView x:Name="lstAnio"
+                                ItemTemplate="{StaticResource listaAnio}" Background="Transparent"
+                                />
                     </ScrollViewer>
                 </StackPanel>
                 <Grid Height="550" Width="550" Grid.Column="1">
                     <Grid.Background>
                         <ImageBrush ImageSource="/Assets/Picture/fondoPregunta.jpg" Stretch="None"/>
                     </Grid.Background>
-                    <ScrollViewer Margin="41,57,42,57">
+                    <ScrollViewer Margin="41,57,42,57" ZoomMode="Disabled">
                         <ListBox x:Name="lstSucesos"
                              ItemTemplate="{StaticResource listaSucesos}"
-                             Background="Transparent" />
+                             Background="Transparent" IsEnabled="False" SelectionChanged="lstSucesos_SelectionChanged"/>
                     </ScrollViewer>
                 </Grid>
             </Grid>
